Fix vertical align on forms.

--- a/root/static/css/screen.css
+++ b/root/static/css/screen.css
@@ -140,6 +140,7 @@ fieldset table label {
 }
 fieldset table tr td {
 	text-align: left;
+	vertical-align: top;
 }
 fieldset tr.missing label,
 fieldset tr.error label {
